[tool.poetry]
name = "AnnaDB-docs"
version = "0.1.0"
description = ""
authors = ["Roman Right <roman-right@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.2.16"
mkdocs = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
